--- a/_layouts/resume_layout.html
+++ b/_layouts/resume_layout.html
@@ -1,7 +1,14 @@
 ---
 layout: page
 ---
-{%- assign loc = "fr" -%}
+{%- assign loc = "en" -%}
+
+<strong style="font-size:14pt;">> Download:</strong>&nbsp
+<a class="resource pdf-en" style="font-size:12pt;" href="/curriculum/resume_en.pdf">ENGLISH</a>
+<a class="resource pdf-fr" style="font-size:12pt;" href="/curriculum/resume_fr.pdf">FRENCH</a>
+
+<br/>
+<br/>
 
 {%- include resume_section.html section="research" loc=loc -%}
 
