Fix: make resume pdf as downloadables

--- a/_layouts/resume_layout.html
+++ b/_layouts/resume_layout.html
@@ -4,8 +4,8 @@ layout: page
 {%- assign loc = "en" -%}
 
 <strong style="font-size:14pt;">> Download:</strong>&nbsp
-<a class="resource pdf-en" style="font-size:12pt;" href="/curriculum/resume_en.pdf">ENGLISH</a>
-<a class="resource pdf-fr" style="font-size:12pt;" href="/curriculum/resume_fr.pdf">FRENCH</a>
+<a class="resource pdf-en" style="font-size:12pt;" href="/curriculum/resume_en.pdf" download>ENGLISH</a>
+<a class="resource pdf-fr" style="font-size:12pt;" href="/curriculum/resume_fr.pdf" download>FRENCH</a>
 
 <br/>
 <br/>
